--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cyberchef": "^9.21.0",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.2.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "jsoning": "^0.12.22"
   }
 }
