--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "jsoning": "^0.12.22"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2"
   }
 }
